--- a/package.json
+++ b/package.json
@@ -12,30 +12,30 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.0.3",
+    "@angular/cli": "^12.0.4",
     "@angular/common": "~12.0.3",
     "@angular/compiler": "~12.0.3",
+    "@angular/compiler-cli": "^12.0.4",
     "@angular/core": "~12.0.3",
     "@angular/forms": "~12.0.3",
-    "@angular/cli": "~12.0.3",
-    "@angular/compiler-cli": "~12.0.3",
     "@angular/platform-browser": "~12.0.3",
     "@angular/platform-browser-dynamic": "~12.0.3",
     "@angular/router": "~12.0.3",
     "@tinymce/tinymce-angular": "^4.2.4",
     "bootstrap": "^5.0.1",
+    "express": "^4.17.1",
     "jquery": "^3.6.0",
     "ngx-webstorage": "^8.0.0",
+    "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
-    "zone.js": "~0.11.4",
-    "express": "^4.17.1",
-    "path": "^0.12.7",
-    "typescript": "~4.2.3"
+    "typescript": "~4.2.3",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.0.3",
-    "@angular/cli": "~12.0.3",
-    "@angular/compiler-cli": "~12.0.3",
+    "@angular/cli": "^12.0.4",
+    "@angular/compiler-cli": "^12.0.4",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.7.0",
